fix spacing

--- a/src/app/assets/styles/pages/feedback/post.scss
+++ b/src/app/assets/styles/pages/feedback/post.scss
@@ -4,6 +4,7 @@
     margin: 5vh auto 0 auto;
     &-head {
         display: flex;
+        margin-bottom: 30px;
         justify-content: space-between;
         align-items: center;
         &.column {
